# roxie-theater

./: .gitignore  README.md  pyproject.toml
.github/workflows/: fetch.yml  scrape.yml
src/roxie_theater/: __init__.py  direct_scrape.py  id_movies.py  llm_create_scraper.py  llm_create_scraper__movie.py  llm_extract.py  llm_scrape.py  log.py  prepare_import.py  scrape.py
src/roxie_theater/exp/: llm_create_scraper.py  llm_scrape.py
