[project]
name = "roxie-theater"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "elh", email = "elh.is.online@gmail.com" }
]
dependencies = [
    "scrapegraphai>=1.25.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "bs4>=0.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/roxie_theater"]
